..F....... [ZBX-22397] fixed disabled input field text color on Safari

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -2611,6 +2611,13 @@ $icon-widget-btn: (
 	border-color: $form-disabled-border-color;
 }
 
+/* This is a hack to define the color for disabled input elements on Safari. Other browsers uses 'color' instead. */
+@supports (-webkit-backdrop-filter: blur(1px)) {
+	%form-disabled {
+		-webkit-text-fill-color: $form-disabled-font-color;
+	}
+}
+
 .inaccessible {
 	.subfilter-enabled {
 		color: darken($font-selected-color, 25%);
