--- a/ui/assets/styles/dark-theme.css
+++ b/ui/assets/styles/dark-theme.css
@@ -2571,6 +2571,13 @@ z-select[disabled] button,
   background-color: #2b2b2b !important;
   border-color: #3d3d3d; }
 
+/* This is a hack to define the color for disabled input elements on Safari. Other browsers uses 'color' instead. */
+@supports (-webkit-backdrop-filter: blur(1px)) {
+  z-select[disabled] button,
+  .z-select[disabled] button, z-select[readonly] button,
+  .z-select[readonly] button, .multiselect[aria-disabled], .radio-list-control input[type="radio"][disabled] + label, input[disabled], input[readonly], textarea[disabled], textarea[readonly], select option[disabled], select[disabled], select[readonly], .checkbox-radio[readonly] span,
+  .checkbox-radio[readonly] + label span, .checkbox-radio[disabled] + label span, .input-group button.btn-dropdown-toggle:disabled {
+    -webkit-text-fill-color: #525252; } }
 .inaccessible .subfilter-enabled {
   color: #b2b2b2; }
 
